Dodanie dodatkowego komponentu - Filters

--- a/src/components/MainPage/Links.css
+++ b/src/components/MainPage/Links.css
@@ -11,16 +11,15 @@
   font-family: "Leelawadee", Arial, sans-serif;
   text-decoration: none;
   padding: 70px;
-  float: right;
 }
-.button1:hover
-{
+
+.button1:hover {
   background-color: #855abe;
   border: solid 2px #775abe;
 }
-.button2
-{
-  position:relative;
+
+.button2 {
+  position: relative;
   height: 350px;
   width: 350px;
   background-color: #f9a811;
@@ -32,9 +31,29 @@
   font-family: "Leelawadee", Arial, sans-serif;
   text-decoration: none;
   padding: 75px;
-  float: none;
 }
+
 .button2:hover {
   background-color: #ffc152;
   border: solid 2px #fabd50;
+}
+
+.button3 {
+  position: relative;
+  height: 350px;
+  width: 350px;
+  background-color: #84f933;
+  border: solid 2px #7ff333;
+  border-radius: 10px;
+  text-align: center;
+  font-size: xx-large;
+  color: #fafef0;
+  font-family: "Leelawadee", Arial, sans-serif;
+  text-decoration: none;
+  padding: 75px;
+}
+
+.button3:hover {
+  background-color: #acf980;
+  border: solid 2px #a6f37a;
 }
