--- a/src/components/ChangeParameters/Header.css
+++ b/src/components/ChangeParameters/Header.css
@@ -1,7 +1,6 @@
 div.Title1 {
     background-color: #672a96;
     height: 75px;
-    text-align: center;
     padding-top: 15px;
     box-shadow: 0 1px 14px 0 rgba(103, 42, 150, 0.5);
 }
@@ -9,4 +8,19 @@ div.Title1 {
 h2 {
     font-size: xx-large;
     color: #fafef0;
+}
+
+.Back {
+    padding-right: 30px;
+    margin-right: 60px;
+    color: #fafef0;
+    text-decoration: none;
+    border-right: 2px solid #fafef0;
+    height: 65px;
+}
+
+.Back:hover {
+    color: #cbb3fe;
+    border-right: 3px solid #cbb3fe;
+    text-decoration: none;
 }
