--- a/src/components/Drawing/DrawingCanvas.css
+++ b/src/components/Drawing/DrawingCanvas.css
@@ -1,4 +1,9 @@
 .canvas-border {
-    margin: 60px;
-    box-shadow: 0 0 10px 2px rgba(0,0,0,0.75);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.75);
+}
+
+.DrawingCanvas canvas {
+  position: absolute;
+  left: 60px;
+  top: 60px;
 }
