--- a/src/components/Filters/Images.css
+++ b/src/components/Filters/Images.css
@@ -14,6 +14,15 @@
     box-shadow: 0 1px 14px 0;
 }
 
+.Photo .Frame {
+    padding: 50px;
+    box-shadow: 0 0px 0px 0;
+}
+
+.Photo .Frame:hover {
+    box-shadow: 0 0px 0px 0;
+}
+
 .Winter {
     filter: brightness(2.2) grayscale(0.6);
     -webkit-filter: brightness(2.2) grayscale(0.6);
