--- a/src/components/Filters/Filters.css
+++ b/src/components/Filters/Filters.css
@@ -1,4 +1,4 @@
-.Filters {
+.Filters .navbar {
   background-color: #f9a811;
   box-shadow: 0 1px 14px 0 rgba(249, 168, 17, 0.5);
   position: relative;
@@ -19,23 +19,14 @@
     margin-left: 20px;
 }
 
-.Filters .Info {
-    text-align: center;
-    color: #fe9333;
-    font-family: "Leelawadee", Arial, sans-serif;
-    font-size: x-large;
-}
-
 .Filters .Brand {
   border-right: 1px solid #e19711;
   padding: 0 16px;
 }
 
-.Filters .Back {
-    padding-right: 20px;
-    color: #fafef0;
-    text-decoration: none;
-    height: 65px;
+.Filters .navbar-brand {
+    padding-left: 20px;
+    color: white;
 }
 
 .Filters .Back .back-icon {
@@ -44,6 +35,7 @@
   border-right: 1px solid #e19711;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.5);
+  transform: scale(2);
 }
 
 .Filters .Back .back-icon:hover {
@@ -71,4 +63,11 @@
 
 .FilterView {
 
+}
+
+.Back {
+    padding-right: 20px;
+    color: #fafef0;
+    text-decoration: none;
+    height: 65px;
 }
