Zapisywanie obrazka w module filters (#5)
* Pierwsza próba zapisywania obrazka w filters jako jpg

* nic nie dziala

* Dziala, ale brzydki kod

* Poprawki brzydkiego kodu

* Poprawki ostrzeżeń transpilatora

* Lekkie poprawki cssów i paddingów

* Dodanie animacji przy najechaniu na kafelek

* Poprawienie przycisku wstecz

* Wyrzucenie niepotrzebnych stylów css

--- a/src/components/Drawing/Drawing.css
+++ b/src/components/Drawing/Drawing.css
@@ -12,19 +12,10 @@
     border-right: black solid 1px;
 }
 
-.Drawing .raquo-delimeter {
-    font-size: 1.25rem;
+.Drawing .back-icon {
     padding-left: 15px;
     padding-right: 30px;
     border-right: 1px solid #65c931;
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.Drawing .raquo-delimeter:hover {
-    color: rgba(0, 0, 0, .9);
-    text-decoration: none;
-    color: #e6e6e6;
 }
 
 .Drawing .navbar-brand {
