--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,19 @@
 .scale2x {
     transform: scale(2);
 }
+
+.hidden {
+    display: none;
+}
+
+.back-icon {
+    font-size: 1.25rem;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
+    transform: scale(2);
+}
+
+.back-icon:hover {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.5);
+}
