--- a/src/components/ChangeParameters/CpChooseImage.css
+++ b/src/components/ChangeParameters/CpChooseImage.css
@@ -1,19 +1,18 @@
 .ChooseImage form {
-    padding-top: 30px;
-    padding-bottom: 30px;
-
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .ChooseImage .fileInput {
-    color: #471d69;
-    font-family: "Leelawadee", Arial, sans-serif;
+  color: #471d69;
+  font-family: "Leelawadee", Arial, sans-serif;
 }
 
-.ChooseImage .imgView {
-    overflow-y: scroll;
-    overflow-x: scroll;
-    max-height: 450px;
-    max-width: 900px;
+.ChooseImage .canvasHolder {
+  max-height: 537px;
 
-    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.75);
+  margin-right: 50px;
+  overflow-y: auto;
+  overflow-x: auto;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.75);
 }
