--- a/src/components/ChangeParameters/CpChooseImage.css
+++ b/src/components/ChangeParameters/CpChooseImage.css
@@ -16,3 +16,8 @@
   overflow-x: auto;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.75);
 }
+
+.ChooseImage .warning {
+  color: red;
+  font-weight: bold;
+}
