--- a/src/components/Drawing/DrawingButtons.css
+++ b/src/components/Drawing/DrawingButtons.css
@@ -18,8 +18,7 @@
     height: 20px;
     border-radius: 3px;
     text-align: center;
-    margin: auto;
-    margin-left: 5px;
+    margin: auto auto auto 5px;
     width: 38px;
 }
 
