--- a/src/components/Drawing/Drawing.css
+++ b/src/components/Drawing/Drawing.css
@@ -3,9 +3,8 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    background-color: #423a9e;
-
-    box-shadow: 0 1px 14px 0 rgba(66, 58, 158, 0.5);
+    background-color: rgb(110, 219, 49);
+    box-shadow: 0 1px 14px 0 rgba(110, 219, 49, 0.5);
 }
 
 .Drawing .right-vertical-bar {
@@ -19,8 +18,9 @@
 }
 
 .Drawing .navbar-brand {
-    padding-left: 20px;
+    padding: 0 3rem 0 1rem;
     color: white;
+    border-right: 1px solid #65c931;
 }
 
 .Drawing .navbar-coloring-buttons {
