--- a/src/components/Drawing/DrawingButtons.css
+++ b/src/components/Drawing/DrawingButtons.css
@@ -6,12 +6,21 @@
     display: flex;
     margin-left: 15px;
     margin-right: 25px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 4px;
+    border: 1px solid #65c931;
+    color: #00290d;
+    background-color: #e3e8e3;
+    border-radius: 5px;
+
 }
 
 .DrawingButtons .paint-bar .paint-size {
     cursor: pointer;
     margin-top: 10px;
     width: 150px;
+    color: #00290d;
 }
 
 .DrawingButtons .paint-bar .paint-size-val {
@@ -36,7 +45,7 @@
     cursor: pointer;
     width: 62px;
     margin: 0 5px;
-    color: #fff;
+    color: #00290d;
 }
 
 .DrawingButtons .paint-bar .button-square {
@@ -45,6 +54,7 @@
     padding: 0;
     font-size: 23px;
     font-weight: bold;
+    color: #00290d;
 }
 
 .DrawingButtons .paint-bar .button-mode:focus {
@@ -52,14 +62,18 @@
 }
 
 .DrawingButtons .paint-bar .button-mode.selected {
-    border: solid 1px #6edb31;
-    box-shadow: inset 0 0 0 2px #6edb31;
+    border-bottom: solid 1px rgba(33, 66, 23, 0.3);
     transition: 0.25s ease-out;
-    background-color: #214217;
+    background-color: rgb(33, 66, 23);
+    color: #dbe0db;
 }
 
 .DrawingButtons .button-save {
     margin-left: 20px;
+}
+
+.DrawingButtons .buttons-color {
+    color: #00290d;
 }
 
 .DrawingButtons .triangle-icon {
@@ -67,4 +81,50 @@
     position: relative;
     top: 4px;
     right: 4px;
+    color: #00290d;
+}
+
+.DrawingButtons input[type=range] {
+    padding-bottom: 5px;
+}
+
+.DrawingButtons input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0 0 0 #000000;
+    border: 1px solid #64c22a;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #00290d;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7px;
+}
+
+.DrawingButtons input[type=range]::-moz-range-thumb {
+    box-shadow: 0 0 0 #000000;
+    border: 1px solid #7aee34;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #00290d;
+    cursor: pointer;
+}
+
+.DrawingButtons input[type=range]::-webkit-slider-runnable-track {
+    background: #bcc0bc;
+}
+
+.DrawingButtons input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #9dc0a9;
+}
+
+.DrawingButtons input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0 0 0 #000000;
+    border: 1px solid #bcc0bc;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #00290d;
+    cursor: pointer;
 }
