Nowe screeny i poprawka jednego koloru

--- a/src/components/Drawing/DrawingButtons.css
+++ b/src/components/Drawing/DrawingButtons.css
@@ -128,3 +128,7 @@
     background: #00290d;
     cursor: pointer;
 }
+
+.DrawingButtons input[type=range]::-moz-range-track {
+    background: #bcc0bc;
+}
