--- a/src/components/ChangeParameters/CpParameters.css
+++ b/src/components/ChangeParameters/CpParameters.css
@@ -39,6 +39,10 @@
     background: #ddccf7;
 }
 
+.InputsRange input[type=range]:focus::-moz-range-track {
+    background: #ddccf7;
+}
+
 .InputsRange input[type=range]::-ms-thumb {
     margin-top: 1px;
     box-shadow: 0 0 0 #000000;
